--- a/backtotop.css
+++ b/backtotop.css
@@ -4,7 +4,7 @@
 }
 
 #backtotop-logo1 {
-  background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='50pt' height='50pt' viewBox='0 0 50 50' version='1.1'><g id='surface1'><path style='stroke:none;fill-rule:nonzero;fill:rgb(0%,0%,0%);fill-opacity:1;' d='M 0.78125 25 C 0.78125 11.621094 11.621094 0.78125 25 0.78125 C 38.378906 0.78125 49.21875 11.621094 49.21875 25 C 49.21875 38.378906 38.378906 49.21875 25 49.21875 C 11.621094 49.21875 0.78125 38.378906 0.78125 25 Z M 23.339844 13.875 L 10.109375 27.109375 C 9.1875 28.027344 9.1875 29.511719 10.109375 30.421875 L 11.765625 32.078125 C 12.6875 33 14.171875 33 15.078125 32.078125 L 25 22.15625 L 34.921875 32.078125 C 35.839844 33 37.324219 33 38.234375 32.078125 L 39.890625 30.421875 C 40.8125 29.503906 40.8125 28.015625 39.890625 27.109375 L 26.660156 13.875 C 25.742188 12.957031 24.257812 12.957031 23.339844 13.875 Z M 23.339844 13.875'/></g></svg>") center center no-repeat;
+  background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='32pt' height='32pt' viewBox='0 0 32 32' version='1.1'><g id='surface1'><path style='stroke:none;fill-rule:nonzero;fill:rgb(255,255,255);fill-opacity:1;' d='M 16.53125 10.21875 L 24.207031 17.894531 C 24.5 18.1875 24.5 18.664062 24.207031 18.957031 L 22.792969 20.367188 C 22.5 20.664062 22.023438 20.664062 21.730469 20.367188 L 16 14.636719 L 10.269531 20.367188 C 9.976562 20.664062 9.5 20.664062 9.207031 20.367188 L 7.792969 18.957031 C 7.5 18.664062 7.5 18.1875 7.792969 17.894531 L 15.46875 10.21875 C 15.761719 9.925781 16.238281 9.925781 16.53125 10.21875 Z M 31.5 16 C 31.5 24.5625 24.5625 31.5 16 31.5 C 7.4375 31.5 0.5 24.5625 0.5 16 C 0.5 7.4375 7.4375 0.5 16 0.5 C 24.5625 0.5 31.5 7.4375 31.5 16 Z M 28.5 16 C 28.5 9.09375 22.90625 3.5 16 3.5 C 9.09375 3.5 3.5 9.09375 3.5 16 C 3.5 22.90625 9.09375 28.5 16 28.5 C 22.90625 28.5 28.5 22.90625 28.5 16 Z M 28.5 16'/></g></svg>") center center no-repeat;
   background-position: center;
   min-height: 50px;
   max-height: 50px;
@@ -18,9 +18,10 @@
   height: 50px;
   position: fixed !important;
 
+  color: white;
   bottom: 40px;
   right: 40px;
-  
+
   background-color: #777777;
   cursor: pointer;
   border: 0;
