--- a/backtotop.css
+++ b/backtotop.css
@@ -57,6 +57,7 @@
   max-width: 50px;
   position: fixed !important;
 }
+
 #backtotop-logo5:before {
   display: block;
   content: '';
@@ -64,6 +65,21 @@
 
 #backtotop-logo5 {
   background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='32pt' height='32pt' viewBox='0 0 32 32' version='1.1'><g id='surface1'><path style='stroke:none;fill-rule:nonzero;fill:rgb(255,255,255);fill-opacity:1;' d='M 16 31.5 C 24.5625 31.5 31.5 24.5625 31.5 16 C 31.5 7.4375 24.5625 0.5 16 0.5 C 7.4375 0.5 0.5 7.4375 0.5 16 C 0.5 24.5625 7.4375 31.5 16 31.5 Z M 2.5 16 C 2.5 8.582031 8.507812 2.5 16 2.5 C 23.417969 2.5 29.5 8.507812 29.5 16 C 29.5 23.417969 23.492188 29.5 16 29.5 C 8.582031 29.5 2.5 23.492188 2.5 16 Z M 8.28125 15.21875 L 15.46875 8.023438 C 15.761719 7.730469 16.238281 7.730469 16.53125 8.023438 L 23.71875 15.21875 C 24.011719 15.511719 24.011719 15.988281 23.71875 16.28125 L 23.289062 16.710938 C 22.992188 17.007812 22.507812 17.007812 22.21875 16.699219 L 17.0625 11.355469 L 17.0625 23.25 C 17.0625 23.664062 16.726562 24 16.3125 24 L 15.6875 24 C 15.273438 24 14.9375 23.664062 14.9375 23.25 L 14.9375 11.355469 L 9.78125 16.707031 C 9.488281 17.007812 9.007812 17.011719 8.710938 16.71875 L 8.28125 16.289062 C 7.988281 15.988281 7.988281 15.511719 8.28125 15.21875 Z M 8.28125 15.21875'/></g></svg>") center center no-repeat;
+  background-position: center;
+  min-height: 50px;
+  max-height: 50px;
+  min-width: 50px;
+  max-width: 50px;
+  position: fixed !important;
+}
+
+#backtotop-logo6:before {
+  display: block;
+  content: '';
+}
+
+#backtotop-logo6 {
+  background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='32pt' height='36pt' viewBox='0 0 32 36' version='1.1'><g id='surface1'><path style='stroke:none;fill-rule:nonzero;fill:rgb(255,255,255);fill-opacity:1;' d='M 0.320312 18.53125 L 0.824219 19.027344 C 1.160156 19.355469 1.703125 19.355469 2.035156 19.027344 L 14.785156 6.476562 L 14.785156 32.90625 C 14.785156 33.371094 15.167969 33.75 15.644531 33.75 L 16.355469 33.75 C 16.832031 33.75 17.214844 33.371094 17.214844 32.90625 L 17.214844 6.476562 L 29.964844 19.027344 C 30.296875 19.355469 30.839844 19.355469 31.175781 19.027344 L 31.679688 18.53125 C 32.015625 18.199219 32.015625 17.667969 31.679688 17.335938 L 16.605469 2.496094 C 16.269531 2.167969 15.730469 2.167969 15.394531 2.496094 L 0.320312 17.335938 C -0.015625 17.667969 -0.015625 18.199219 0.320312 18.53125 Z M 0.320312 18.53125'/></g></svg>") center center no-repeat;
   background-position: center;
   min-height: 50px;
   max-height: 50px;
