--- a/backtotop.css
+++ b/backtotop.css
@@ -1,3 +1,18 @@
+#backtotop-logo7:before {
+  display: block;
+  content: '';
+}
+
+#backtotop-logo7 {
+  background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='32pt' height='51pt' viewBox='0 0 32 51' version='1.1'><g id='surface1'><path style='stroke:none;fill-rule:nonzero;fill:rgb(255,255,255);fill-opacity:1;' d='M 17.699219 15.90625 L 31.300781 29.453125 C 32.238281 30.390625 32.238281 31.90625 31.300781 32.832031 L 29.039062 35.082031 C 28.101562 36.019531 26.578125 36.019531 25.648438 35.082031 L 16 25.488281 L 6.359375 35.09375 C 5.421875 36.027344 3.898438 36.027344 2.96875 35.09375 L 0.699219 32.839844 C -0.238281 31.90625 -0.238281 30.390625 0.699219 29.464844 L 14.300781 15.917969 C 15.238281 14.972656 16.761719 14.972656 17.699219 15.90625 Z M 17.699219 15.90625'/></g></svg>") center center no-repeat;
+  background-position: center;
+  min-height: 50px;
+  max-height: 50px;
+  min-width: 50px;
+  max-width: 50px;
+  position: fixed !important;
+}
+
 #backtotop-logo1:before {
   display: block;
   content: '';
